# watchdog

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  WatchDog.code-workspace
cmake/: CheckIncludes.cmake
configuration/camera/: associated_ids.xml  info.xml  registered_devices.xml
configuration/log/: log_config.yaml
configuration/models/: elephant.config
configuration/storage/: capacity  storage.sh
configuration/system/: system_info.xml
db/: openads_storage.db
docker/: Dockerfile.WatchDog
scripts/Installation/: Dockerfile  info.xml  install.py  test.py
scripts/Startup/: __main__.py  checklist.py
scripts/Startup/Preflight/: dir_structure.py  util.py
scripts/detection/: detect.py  ip.py
src/: CMakeLists.txt  watchdog.cxx
src/IPC/: CMakeLists.txt  IpcChannel.cxx  IpcChannel.hxx  IpcMem.hxx  IpcObject.hxx
src/Ui/: CMakeLists.txt  Dockerfile  MainWindowe.cxx  MainWindowe.hxx  MainWindowe.ui  Ui.cxx  Window.cxx  Window.hxx  main.cxx
src/WatchDogApp/: CMakeLists.txt  NavigationPanel.ui.qml  WatchDogApp.qmlproject  WatchDogApp.qmlproject.qtds  qmlmodules
src/WatchDogApp/content/: App.qml  CMakeLists.txt  NavigationPane.ui.qml  Screen01.ui.qml
src/WatchDogApp/imports/: CMakeLists.txt
src/WatchDogApp/imports/WatchDogApp/: CMakeLists.txt  qmldir
src/WatchDogApp/imports/WatchDogApp/designer/: plugin.metainfo
src/WatchDogApp/src/: import_qml_plugins.h
src/include/: Result.hxx  WdTypes.hxx
src/vision/: CMakeLists.txt  Xml.cxx  Xml.hxx
test/: CMakeLists.txt  TestResult.cxx
test/ipc/: TestIpcChannel.cxx
test/parsing/: TestXmlSystemConfig.cxx  test_system_info.xml
test/ui/: TestUiWindow.cxx
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  EventListings.css  EventListings.tsx  Navigation.css  Navigation.tsx  main.tsx  style.css
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
web/src/Navigation/: NavigationPanel.css  NavigationPanel.tsx
